[spring-thymeleaf-validation] エラーメッセージの変更

--- a/spring-thymeleaf-validation/src/main/resources/messages.properties
+++ b/spring-thymeleaf-validation/src/main/resources/messages.properties
@@ -5,7 +5,7 @@ errors.size={0}は\
                   min += '文字以上' += max += '文字以下で入力してください。'}
 errors.hometown={0}は不正です。
 errors.same={1}と{2}は同じ文字を入力してください。
-errors.errorsExist=入力エラーがあります。正しい値を入力してください。
+errors.errorsExist={0}があります。{1}を入力してください。
 
 name=名前
 height=身長
@@ -17,5 +17,7 @@ password=パスワード
 passwordConfirm=パスワード（確認用）
 passphrase=パスフレーズ
 passphraseConfirm=パスフレーズ（確認用）
+inputError=入力エラー
+validValue=正しい値
 
 messages.sample=これは{0}です。
